remove body padding, correct for horizontal scroll

--- a/smartly.css
+++ b/smartly.css
@@ -332,7 +332,7 @@ margin-top: 0px;
 /* fix mobile overscroll */
 
 .dashboard div .header {
-	padding: 0;
+	padding: 0 0 0 15px;
 	margin: 10px 10px 10px 0;
 }
 
@@ -340,6 +340,8 @@ margin-top: 0px;
 .wrapper {
 	margin-left: 0;
 	margin-bottom: 0;
+	padding-left: 15px;
+	width: calc(100%);
 }
 
 .tile-edit {
